# animefs

./: Cargo.toml  README.md  flake.nix  zhopa
src/: error_code.rs  lib.rs
src/btree/: mod.rs  record.rs  tree.rs
src/filesystem/: checksum.rs  compression.rs  driver.rs  entry.rs  header.rs  io.rs  mod.rs  tasks.rs  worker.rs
src/filesystem/tasks/: handler.rs  mod.rs  scheduler.rs  tasks.rs  worker.rs
src/io/: buf.rs  mod.rs  storage.rs
src/pages/: book.rs  mod.rs  page.rs
